manifests/appDjango/djangoDeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  namespace: client-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django
        image: django-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
