manifests/appDjango/djangoService.yml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: client-demo

spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
